# axbind_2

./: Cargo.toml  README.md  test.sh
bundled_dependencies/gfunc/v0.1/src/: tomlutil.rs
bundled_dependencies/gfunc/v0.1/src/archive/: run.rs.byreference
bundled_dependencies/toml-context/v0.1/: Cargo.toml
example_config/: README.md  config.toml  run_example
example_config/example_dir/: file_one.txt  file_one.txt.axbind  file_two.txt  file_two.txt.specialbind
example_config/example_dir/.axbind/: group_one.toml  group_two.toml  main.toml  special.toml
example_config/functions/: addcaret.toml  parenthesis.toml
example_config/maps/: bar2baz.toml  baz2qux.toml  foo2bar.toml  includeall.toml
src/: args.rs  config.rs  lib.rs  main.rs  registry.rs  tagfiles.rs
test_dotconfig/axbind/: config.toml
test_dotconfig/axbind/functions/: testfunction.toml  testfunction_one.toml  testfunction_two.toml
test_dotconfig/axbind/maps/: testinclude.toml  testmap_one.toml  testmap_three.toml  testmap_two.toml  testmix.toml
test_dotconfig/axbind/maps/inclusion_testmaps/: map_one.toml  map_three.toml  map_two.toml
test_dotconfig/test_one/: file_one  file_one.axbind  file_three  file_three.axbind  file_two  file_two.axbind
test_dotconfig/test_one/dot_axbind/: first.toml  second.toml
test_dotconfig/test_two/: file_one  file_one.bind  file_three  file_three.axbind  file_two  file_two.axbind
test_dotconfig/test_two/dot_axbind/: first.toml  main.toml  second.toml
tests/: config.toml
tests/maps/: testmap.toml
