[package]
name = "axbind"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml-context = { path = "bundled_dependencies/toml-context/v0.1" }
gfunc = { path = "bundled_dependencies/gfunc/v0.1", features = [ 'fnav', 'run' ] }
aho-corasick = "1.1.2"
optwrite = { path = "bundled_dependencies/optwrite/v0.1" }
anyhow = "1.0.75"
toml = "0.8.8"

